Fix z-indexing
Fixes the bug where the buttons under the popout would always be unclickable

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,14 @@
     z-index: 1;
 }
 
+.privateChannels-oVe7HL {
+    z-index:  1;
+}
+
+.container-ZMc96U {
+    z-index: 1;
+}
+
 .panels-3wFtMD {
     z-index: 0;
 }
